application/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: "enabled"
  name: rest-api-with-mesh
