application/kustomize/base/deployment-front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-front-end
    app.kubernetes.io/component: web-front-end
    app.kubernetes.io/instance: web-front-end
    app.kubernetes.io/name: web-front-end
    app.kubernetes.io/part-of: app
    app.openshift.io/runtime: redhat
  name: web-front-end
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web-front-end
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web-front-end
        deployment: web-front-end
        version: "v1"
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: SERVICE_LOCAL
          value: web-front-end
        - name: SERVICE_REMOTE
          value: service-b
        image: quay.io/llevy/service-b:v1
        imagePullPolicy: Always
        name: web-front-end
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
