application/kustomize/base/hello-http-route-v2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-front-end-route
  namespace: rest-api-with-mesh
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: hello-gateway
    namespace: ingress-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /web
    filters:
    - type: URLRewrite
      urlRewrite:
        pathPrefix: /
    backendRefs:
    - group: ""
      kind: Service
      name: web-front-end
      port: 8080
